# OSRipper

./: .gitignore  LICENSE  README.MD  pyproject.toml  pytest.ini  requirements.txt  setup.py
debian/: changelog  control  copyright  watch
docs/: API.md  USAGE.md
src/osripper/: __init__.py  __main__.py  cli.py  config.py  generator.py  logger.py  main.py  obfuscator.py  obfuscator_enhanced.py  ripgrok.py  venv_helper.py
src/osripper/agent/: __init__.py  agent.py  doh_client.py  executor.py  https_client.py  session.py  stealth.py
src/osripper/c2/: __init__.py  cert_utils.py  doh_handler.py  server.py  session_manager.py
src/osripper/c2/static/css/: style.css
src/osripper/c2/static/js/: dashboard.js  generate.js
src/osripper/c2/templates/: generate.html  index.html  session.html
tests/: README.md  __init__.py  test_generator.py  test_integration.py  test_main.py
