[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osripper"
version = "0.4.1"
description = "Advanced Payload Generator and Crypter - FUD backdoor generator"
readme = "README.MD"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "NoahOksuz"}
]
keywords = [
    "payload",
    "generator",
    "crypter",
    "backdoor",
    "fud",
    "obfuscation",
    "penetration-testing",
    "red-team"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Nuitka>=1.8.0",
    "tinyaes>=1.0.0",
    "pprintpp>=0.4.0",
    "zstandard>=0.19.0",
    "sandboxed>=0.1.0",
    "pyinstaller>=5.0",
    "ngrok-api>=0.4.0",
    "pyngrok>=6.0.0",
    "ordered-set>=4.1.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.urls]
Homepage = "https://github.com/NoahOksuz/OSRipper"
Repository = "https://github.com/NoahOksuz/OSRipper"
Issues = "https://github.com/NoahOksuz/OSRipper/issues"

[project.scripts]
osripper = "osripper.main:main"
osripper-cli = "osripper.cli:main_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/osripper",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]


